Add SMS auto-detect for transactions
- Parse incoming SMS for UPI/bank transactions
- Show notification with Dismiss/Add actions
- Pending transactions section in Home screen
- SMS permission toggle in Settings
- Pending transactions excluded from totals until saved
- Compact transaction card layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,15 @@
             </intent-filter>
         </receiver>
 
+        <!-- Notification Action Receiver for transaction dismiss -->
+        <receiver
+            android:name=".service.NotificationActionReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.money.tracker.DISMISS_TRANSACTION" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
