--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <!-- Notification permission for Android 13+ -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
-    <!-- Query UPI apps to launch them -->
+    <!-- Query UPI apps and sharing apps to launch them -->
     <queries>
         <package android:name="com.google.android.apps.nbu.paisa.user" />
         <package android:name="com.phonepe.app" />
@@ -17,6 +17,12 @@
         <package android:name="in.org.npci.upiapp" />
         <package android:name="com.dreamplug.androidapp" />
         <package android:name="in.amazon.mShop.android.shopping" />
+        <package android:name="com.Splitwise.SplitwiseMobile" />
+        <package android:name="com.whatsapp" />
+        <package android:name="org.telegram.messenger" />
+        <package android:name="com.google.android.keep" />
+        <package android:name="com.samsung.android.app.notes" />
+        <package android:name="com.microsoft.office.onenote" />
     </queries>
 
     <application
